Improved viewer responsiveness
Doesn't *necessarily* mean the viewer is better... need to continue working on it to ensure it behaves itself.